# knowledge_keeper

./: .dockerignore  .env.docker.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
backend/: Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
backend/src/apps/access_control/: __init__.py  admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/accounts/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/coach/: __init__.py  apps.py  chat_providers.py  ports.py  providers.py  services.py  (+3 more)
backend/src/config/: __init__.py  celery.py  settings.py  urls.py
backend/tests/: test_access_control_api.py  test_accounts.py  test_auth_api.py  test_auto_linking.py  test_auto_tagging.py  test_bootstrap_owner_command.py  test_coach_api.py  test_coach_retrieval.py  test_context_tags.py  test_dev_runtime_migrations.py  test_health.py  test_knowledge_note_migration.py  test_knowledge_note_provider.py  test_knowledge_note_search.py  test_knowledge_note_substance_gate.py  test_knowledge_note_tasks.py  test_knowledge_notes_api.py  test_media_api.py  test_media_library.py  test_media_search_api.py  test_media_storage.py  test_note_embedding.py  test_note_extraction_prompt.py  test_playback.py  test_playback_api.py  test_playback_providers.py  test_playback_tasks.py  test_semantic_note_search.py  test_settings.py  test_substance_gate.py  test_transformation_fields.py
(+151 files in other folders)
