[project]
name = "knowledge-keeper-backend"
version = "0.1.0"
description = "Backend for the Knowledge Keeper private media and knowledge platform"
dependencies = [
  "Django>=5.2,<6.0",
  "djangorestframework>=3.16,<4.0",
  "psycopg[binary]>=3.2,<4.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "openai>=1.0,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-django>=4.11,<5.0",
  "ruff>=0.11,<0.12",
  "mypy>=1.15,<2.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "backend/tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["manage.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
